--- a/src/components/AboutBtn/styles.scss
+++ b/src/components/AboutBtn/styles.scss
@@ -1,6 +1,6 @@
 .about-btn {
   background-color: #fc427b;
-  padding: 0.3125rem 0.875rem;
+  padding: 0px 0.875rem;
   color: white;
   border-radius: 0.9375rem;
   display: inline-block;
