--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -580,11 +580,11 @@
   font-size: 2em;
 }
 
-.markdown-body h1,
-.markdown-body h2 {
-  border-bottom: 1px solid #eaecef;
-  padding-bottom: 0.3em;
-}
+// .markdown-body h1,
+// .markdown-body h2 {
+//   //border-bottom: 1px solid #eaecef;
+//   //padding-bottom: 0.3em;
+// }
 
 .markdown-body h2 {
   font-size: 1.5em;
