font weight and add  media screen

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -12,5 +12,8 @@
   .about-div {
     width: 48.75rem;
     padding: 2.8125rem;
+    @media screen and (max-width: 420px) {
+      padding: 1rem;
+    }
   }
 }
