--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,14 @@ h1 {
   color: #fbc531;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 a,
 a:link,
 a:visited,
@@ -23,6 +31,8 @@ blockquote {
 
 body {
   color: #f5f6fa;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 hr {
