--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,6 +1,22 @@
+th,
+td {
+  border-bottom: 1px solid #f5f6fa;
+}
+
+ul {
+  margin-left: 1.75rem;
+}
+
 pre[class*='language-'] {
   background-color: #2c3a47;
   padding: 1.3125rem;
   border-radius: 0.625rem;
+  font-size: 0.875rem;
+}
+
+:not(pre) > code[class*='language-'] {
+  background-color: #f6e58d;
+  color: #2c3a47;
+  padding: 0.1rem 0.2rem;
   font-size: 0.875rem;
 }
